[workspace]
members = [
	"noria",
	"server",
	"applications",
]

[profile.release]
debug=true

[patch.crates-io]
# https://github.com/tower-rs/tokio-tower/pull/6
# optional -- just a perf optimization
# comment this out if you want cargo doc to work!
tokio-tower = { git = "https://github.com/shanexu/tokio-tower.git", branch = "no-box" }
evmap = { git = "https://github.com/jonhoo/evmap.git", rev = "d4c12b8758c7e35145c40856f3d3474befe6ecda", features = ["eviction"] }
